--- a/src/lib/i18n/es.json
+++ b/src/lib/i18n/es.json
@@ -83,5 +83,9 @@
     "sponsored": "Patrocinado",
     "ad": "Anuncio",
     "description": "Descubre las mejores aplicaciones de productividad para tus necesidades diarias"
+  },
+  "footer": {
+    "copyright": "© {year} Calculator World. Todos los derechos reservados.",
+    "email": "gueson1989@gmail.com"
   }
 }
