--- a/src/lib/i18n/fr.json
+++ b/src/lib/i18n/fr.json
@@ -83,5 +83,9 @@
     "sponsored": "Sponsorisé",
     "ad": "Annonce",
     "description": "Découvrez les meilleures applications de productivité pour vos besoins quotidiens"
+  },
+  "footer": {
+    "copyright": "© {year} Calculator World. Tous droits réservés.",
+    "email": "gueson1989@gmail.com"
   }
 }
